--- a/form.html
+++ b/form.html
@@ -18,6 +18,11 @@
                     Please enter a URL.
                 </div>
             </div>
+			<div class="mb-3">
+				<label for="html" class="form-label">HTML to use:</label>
+				<textarea name="html" class="form-control">
+				</textarea>
+			</div>
             <div class="mb-3">
                 <div class="form-check">
                     <input type="radio" id="email" name="display" value="email" class="form-check-input" checked>
@@ -123,6 +128,7 @@
                 <div class="card text-bg-${cardType} mb-3">
                     <div class="card-header">
                         <button type="button" class="btn-close float-end" data-bs-dismiss="alert" aria-label="Close"></button>
+						<button type="button" class="btn btn-warning btn-sm float-end" id="nl2br">\\n -> &lt;br&gt;</button>
                         ${title}
                     </div>
                     <div class="card-body">
@@ -136,6 +142,10 @@
             } else {
                 preElement.textContent = content; // Escape the content and display as plain text
             }
+
+			document.getElementById('nl2br').addEventListener('click', function() {
+				document.querySelector('pre.card-text').innerHTML = document.querySelector('pre.card-text').innerHTML.replaceAll("\\n","<br>")
+			});
         }
     </script>
 </body>
