pre-extract toggle: default unchecked; auto-enable when HTML > 200KB; update generate flow to set toggle state based on page size

--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -81,7 +81,7 @@
                             <label class="form-check-label" for="multiday-toggle">Multi-day</label>
                         </div>
                         <div class="form-check form-switch">
-                            <input class="form-check-input" type="checkbox" role="switch" id="preextract-toggle" checked>
+                            <input class="form-check-input" type="checkbox" role="switch" id="preextract-toggle">
                             <label class="form-check-label" for="preextract-toggle">Extract main content before sending</label>
                         </div>
                     </div>
